# gimbal

person_detection/: CMakeLists.txt  package.xml
person_detection/launch/: start_all.launch
person_detection/scripts/: yolov5_person_detection.py
person_detection/src/: aerial_shot.cpp  camera_tf_broadcaster（暂时没用）.cpp  distance_calculator(副本).cpp  distance_calculator.cpp  person_clustering.cpp  rtsp_image_publisher.cpp  slave_simulator.cpp  task_manager.cpp  test_person_publisher.cpp
usb_camera/: CMakeLists.txt  package.xml
usb_camera/src/: img_publisher.cpp  img_viewer.cpp
